# AFLplusplus-protobuf-mutator

./: CMakeLists.txt  README.md
cmake/: libprotobuf-mutator.cmake  libprotobuf.cmake
coconut/: CMakeLists.txt  command.proto  command_proto_mutator.cpp  test_proto_creator.cpp
example/: CMakeLists.txt
